--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@ function 按钮1_被单击(){
 	剪贴板1.置剪贴板内容(编辑框5.取内容());
 	对话框1.弹出提示("复制完成！");
 }
-function 编辑框1_按下某键(a) {if (a==13) {编辑框1.清除焦点();编辑框2.获取焦点();}}
-function 编辑框2_按下某键(a) {if (a==13) {编辑框2.清除焦点();编辑框3.获取焦点();}}
-function 编辑框3_按下某键(a) {if (a==13) {编辑框3.清除焦点();编辑框4.获取焦点();}}
+function 编辑框1_按下某键(a) {if (a==13) {编辑框2.获取焦点();}}
+function 编辑框2_按下某键(a) {if (a==13) {编辑框3.获取焦点();}}
+function 编辑框3_按下某键(a) {if (a==13) {编辑框4.获取焦点();}}
 function 编辑框4_按下某键(a) {if (a==13) {编辑框4.清除焦点();按钮5_被单击();}}
 </script>
 </html>
