--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 		<div class="mui-input-row" style="text-align:center;margin:5px;display:block">
-			<button id="按钮5" type="button" class="mui-btn mui-btn-primary" style="width:100%;height:40px;float:none;margin:0px 0px 0px 0px;font-size:16px;">生成重置密码网址（只对输入的人有效）</button>
+			<button id="按钮5" type="button" class="mui-btn mui-btn-primary" style="width:100%;height:40px;float:none;margin:0px 0px 0px 0px;font-size:16px;">生成重置密码网址</button>
 		</div>
 
 		<div class="mui-input-row" style="margin:5px;display:none">
