--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div>
 
 		<div class="mui-input-row mui-password" style="margin:5px;display:block">
-			<input id="编辑框4" type="password" class="mui-input-password" placeholder="密码(不填默认为123456789)" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>
+			<input id="编辑框4" type="password" class="mui-input-password" placeholder="新密码(不填默认为123456789)" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>
 		</div>
 
 
