--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>密码修改器</title>
+    <title>口语100密码修改器</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -31,7 +31,7 @@
 		</div>
 
 		<div class="mui-input-row" style="margin:5px;display:block">
-			<label id="标签2" style="width:100%;color:#000000;font-size:16px;margin:0px 0px 0px 0px;padding:0px;text-align:left">找到你学校的网址,例如南京市宁海中学分校为http://js.kouyu100.com/nhzxfx/,则.kouyu100.之前的内容是省代码，例如南京市宁海中学分校省代码为js。学校代码为“.kouyu100.com/”后面的内容，例如南京市宁海中学分校学校代码为nhzxfx</label>
+			<label id="标签2" style="width:100%;color:#000000;font-size:16px;margin:0px 0px 0px 0px;padding:0px;text-align:left">找到你学校的网址,例如南京市宁海中学分校为http://js.kouyu100.com/nhzxfx/,则.kouyu100.之前的内容是省代码，例如南京市宁海中学分校省代码为js。学校代码为“.kouyu100.com/”后面的内容，例如南京市宁海中学分校学校代码为nhzxfx注意！区分大小写！</label>
 		</div>
 
 		<div class="mui-input-row" style="margin:5px;display:block">
