--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 
 		<div class="mui-input-row" style="margin:5px;display:block">
-			<label id="标签2" style="width:100%;color:#000000;font-size:16px;margin:0px 0px 0px 0px;padding:0px;text-align:left">找到你学校的网址,例如南京市宁海中学分校为http://js.kouyu100.com/nhzxfx/,则.kouyu100.之前的内容是省代码，例如南京市宁海中学分校省代码为js。学校代码为“.kouyu100.com/”后面的内容，例如南京市宁海中学分校学校代码为nhzxfx注意！区分大小写！</label>
+			<label id="标签2" style="width:100%;color:#000000;font-size:16px;margin:0px 0px 0px 0px;padding:0px;text-align:left">找到你学校的网址,例如南京市宁海中学分校为http://js.kouyu100.com/nhzxfx/,则.kouyu100.之前的内容是省代码，例如南京市宁海中学分校省代码为js。学校代码为“.kouyu100.com/”后面的内容，例如南京市宁海中学分校学校代码为nhzxfx，注意！区分大小写！</label>
 		</div>
 
 		<div class="mui-input-row" style="margin:5px;display:block">
@@ -127,6 +127,11 @@ function 按钮5_被单击(){
 
 function 按钮1_被单击(){
 	剪贴板1.置剪贴板内容(编辑框5.取内容());
+   编辑框1.清除焦点();
+	编辑框2.清除焦点();
+	编辑框3.清除焦点();
+	编辑框4.清除焦点();
+   编辑框5.清除焦点();
 	对话框1.弹出提示("复制完成！");
 }
 function 编辑框1_按下某键(a) {if (a==13) {编辑框2.获取焦点();}}
