--- a/index.html
+++ b/index.html
@@ -1,142 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>口语100密码修改器</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link href="css/mui.min.css" rel="stylesheet"/>
-    <link href="css/icons-extra.css" rel="stylesheet"/>
-    <style type="text/css">
-        body{background-color:#EFEFF4;}
-    </style>
-</head>
-<body>
-
-
-
-	<div class="mui-content" style="background-color:transparent">
-
-		<div class="mui-input-row" style="margin:5px;display:block">
-			<label id="标签10" style="width:100%;color:#FF0000;font-size:20px;margin:0px 0px 0px 0px;padding:0px;text-align:left">页面加载完毕后，若出现载入完成，则代表支持您的浏览器，否则不支持。</label>
-		</div>
-
-		<div class="mui-input-row" style="margin:5px;display:block">
-			<input id="编辑框1" type="text" class="mui-input-clear" placeholder="省代码(往下看）" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>
-		</div>
-
-		<div class="mui-input-row" style="margin:5px;display:block">
-			<input id="编辑框2" type="text" class="mui-input-clear" placeholder="学校代码（往下看）" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>
-		</div>
-
-		<div class="mui-input-row" style="margin:5px;display:block">
-			<label id="标签2" style="width:100%;color:#000000;font-size:16px;margin:0px 0px 0px 0px;padding:0px;text-align:left">找到你学校的网址,例如南京市宁海中学分校为http://js.kouyu100.com/nhzxfx/,则.kouyu100.之前的内容是省代码，例如南京市宁海中学分校省代码为js。学校代码为“.kouyu100.com/”后面的内容，例如南京市宁海中学分校学校代码为nhzxfx，注意！区分大小写！</label>
-		</div>
-
-		<div class="mui-input-row" style="margin:5px;display:block">
-			<input id="编辑框3" type="text" class="mui-input-clear" placeholder="用户名" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>
-		</div>
-
-		<div class="mui-input-row mui-password" style="margin:5px;display:block">
-			<input id="编辑框4" type="password" class="mui-input-password" placeholder="新密码(不填默认为123456789)" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>
-		</div>
-
-
-
-		<div class="mui-input-row" style="text-align:center;margin:5px;display:block">
-			<button id="按钮5" type="button" class="mui-btn mui-btn-primary" style="width:100%;height:40px;float:none;margin:0px 0px 0px 0px;font-size:16px;">生成重置密码网址</button>
-		</div>
-
-		<div class="mui-input-row" style="margin:5px;display:none">
-			<input id="编辑框5" type="text" placeholder="网址" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>
-		</div>
-
-		<div class="mui-input-row" style="text-align:center;margin:5px;display:none">
-			<button id="按钮1" type="button" class="mui-btn mui-btn-primary" style="width:100%;height:40px;float:none;margin:0px 0px 0px 0px;font-size:14px;">复制到剪贴板</button>
-		</div>
-<div id="二维码1" style="margin-left:auto;margin-right:auto;padding:5px;"></div>
-
-
-	</div>
-</body>
-<script src="js/mui.min.js"></script>
-<script src="js/lable.js"></script>
-<script src="js/editBox.js"></script>
-<script src="js/dialogBox.js"></script>
-<script src="js/button.js"></script>
-<script src="js/jiami.js"></script>
-<script src="js/clipboard.js"></script>
-<script src="js/clipboard.min.js"></script>
-<script>
-mui.init({swipeBack: false});
-
-var 标签10 = new 标签("标签10",null);
-var 编辑框1 = new 编辑框("编辑框1",null,编辑框1_按下某键,null,null,null);
-var 编辑框2 = new 编辑框("编辑框2",null,编辑框2_按下某键,null,null,null);
-var 标签2 = new 标签("标签2",null);
-var 编辑框3 = new 编辑框("编辑框3",null,编辑框3_按下某键,null,null,null);
-var 编辑框4 = new 编辑框("编辑框4",null,编辑框4_按下某键,null,null,null);
-var 对话框1 = new 对话框("对话框1",null,null,null);
-var 按钮5 = new 按钮("按钮5",按钮5_被单击);
-var 编辑框5 = new 编辑框("编辑框5",null,null,null,null,null);
-var 按钮1 = new 按钮("按钮1",按钮1_被单击);
-var 剪贴板1 = new 剪贴板("剪贴板1");
-if(mui.os.plus){
-    mui.plusReady(function() {
-        主窗口_创建完毕();
-    });
-}else{
-    window.onload=function(){ 
-        主窗口_创建完毕();
-    }
-}
-
-function 主窗口_创建完毕(){
-	对话框1.弹出提示("载入完成");
-	按钮1.置可视(false);
-	编辑框5.置可视(false);
-}
-
-function 按钮5_被单击(){
-    编辑框1.清除焦点();
-	编辑框2.清除焦点();
-	编辑框3.清除焦点();
-	编辑框4.清除焦点();
-	if(编辑框1.取内容() == "" ){
-		对话框1.弹出提示("请输入完整信息！");
-		return;
-    }else{
-		if(编辑框2.取内容() == "" ){
-			对话框1.弹出提示("请输入完整信息！");
-		    return;
-		}else{
-		    if(编辑框3.取内容() == "" ){
-			    对话框1.弹出提示("请输入完整信息！");
-		        return;
-			}
-		}
-	}
-	if(编辑框4.取内容() == "" ){
-		编辑框4.置内容("123456789");
-	}
-	编辑框5.置内容("http://" + 编辑框1.取内容()+ ".kouyu100.com/webinterface/webcall.action?msg=" + CryptoJS.enc.Base64.stringify(CryptoJS.enc.Utf8.parse("{'action':'resetPassword','salt2':'2fd1','device':'8c:a6:e4:7e:36:a2','paras':['" + 编辑框2.取内容()+"','" + 编辑框3.取内容() + "','" + 编辑框4.取内容() + "'],'code':'42','clientVersion':431,'salt1':'" + 编辑框2.取内容()+"','version':'102'}")));
-	按钮1.置可视(true);
-	编辑框5.置可视(true);
-}
-
-function 按钮1_被单击(){
-	剪贴板1.置剪贴板内容(编辑框5.取内容());
-   编辑框1.清除焦点();
-	编辑框2.清除焦点();
-	编辑框3.清除焦点();
-	编辑框4.清除焦点();
-   编辑框5.清除焦点();
-	对话框1.弹出提示("复制完成！");
-}
-function 编辑框1_按下某键(a) {if (a==13) {编辑框2.获取焦点();}}
-function 编辑框2_按下某键(a) {if (a==13) {编辑框3.获取焦点();}}
-function 编辑框3_按下某键(a) {if (a==13) {编辑框4.获取焦点();}}
-function 编辑框4_按下某键(a) {if (a==13) {编辑框4.清除焦点();按钮5_被单击();}}
-</script>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>口语100密码修改</title><meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" /><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black"><link href="css/mui.min.css" rel="stylesheet"/><link href="css/icons-extra.css" rel="stylesheet"/><style type="text/css">        body{background-color:#EFEFF4;}</style></head><body>	<div class="mui-content" style="background-color:transparent">		<div class="mui-input-row" style="margin:5px;display:block">			<label id="标签10" style="width:100%;color:#FF0000;font-size:20px;margin:0px 0px 0px 0px;padding:0px;text-align:left">页面加载完毕后，若出现载入完成，则代表支持您的浏览器，否则不支持。</label>		</div>		<div class="mui-input-row" style="margin:5px;display:block">			<input id="编辑框1" type="text" class="mui-input-clear" placeholder="省代码(往下看）" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>		</div>		<div class="mui-input-row" style="margin:5px;display:block">			<input id="编辑框2" type="text" class="mui-input-clear" placeholder="学校代码（往下看）" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>		</div>		<div class="mui-input-row" style="margin:5px;display:block">			<label id="标签2" style="width:100%;color:#000000;font-size:16px;margin:0px 0px 0px 0px;padding:0px;text-align:left">找到你学校的网址,例如南京市宁海中学分校为“https://js.kouyu100.com/nhzxfx/index.jsp”,则“https://”与“.kouyu100.”之间的内容是省代码，例如南京市宁海中学分校省代码为js。学校代码为“.kouyu100.com/”后面到下一个“/”之间的内容，例如南京市宁海中学分校学校代码为nhzxfx，注意，区分大小写！</label>		</div>		<div class="mui-input-row" style="margin:5px;display:block">			<input id="编辑框3" type="text" class="mui-input-clear" placeholder="用户名" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>		</div>		<div class="mui-input-row mui-password" style="margin:5px;display:block">			<input id="编辑框4" type="password" class="mui-input-password" placeholder="新密码(不填默认为123456789)" style="color:#000000;font-size:14px;margin:0px 0px 0px 0px;"></input>		</div>		<div class="mui-input-row" style="text-align:center;margin:5px;display:block">			<button id="按钮5" type="button" class="mui-btn mui-btn-primary" style="width:100%;height:40px;float:none;margin:0px 0px 0px 0px;font-size:16px;">重置密码</button>		</div><iframe id="浏览框1" style="width:100%;height:200px" src="" target="_self"></iframe>	</div></body><script src="./asdf.js"></script><script>mui.init({swipeBack: false});var 编辑框1 = new 编辑框("编辑框1",null,编辑框1_按下某键,null,null,null);var 编辑框2 = new 编辑框("编辑框2",null,编辑框2_按下某键,null,null,null);var 编辑框4 = new 编辑框("编辑框4",null,编辑框4_按下某键,null,null,null);var 编辑框3 = new 编辑框("编辑框3",null,编辑框3_按下某键,null,null,null);var 对话框1 = new 对话框("对话框1",null,null,null);var 按钮5 = new 按钮("按钮5",按钮5_被单击);var 浏览框1 = new 浏览框("浏览框1",null);if(mui.os.plus){    mui.plusReady(function() {        主窗口_创建完毕();    });}else{    window.onload=function(){         主窗口_创建完毕();    }}function 编辑框1_按下某键(a) {if (a==13) {编辑框2.获取焦点();}}function 编辑框2_按下某键(a) {if (a==13) {编辑框3.获取焦点();}}function 编辑框3_按下某键(a) {if (a==13) {编辑框4.获取焦点();}}function 编辑框4_按下某键(a) {if (a==13) {编辑框4.清除焦点();按钮5_被单击();}}function 主窗口_创建完毕(){	浏览框1.置可视(false);	对话框1.弹出提示("载入完成");}function 按钮5_被单击(){	编辑框1.清除焦点();	编辑框2.清除焦点();	编辑框3.清除焦点();	编辑框4.清除焦点();	if(编辑框1.取内容() == "" ){		对话框1.弹出提示("请输入完整信息！");		return;    }else{		if(编辑框2.取内容() == "" ){			对话框1.弹出提示("请输入完整信息！");		    return;		}else{		    if(编辑框3.取内容() == "" ){			    对话框1.弹出提示("请输入完整信息！");		        return;			}		}	}	if(编辑框4.取内容() == "" ){		编辑框4.置内容("123456789");	}    浏览框1.跳转("http://" + 编辑框1.取内容()+ ".kouyu100.com/webinterface/webcall.action?msg=" + CryptoJS.enc.Base64.stringify(CryptoJS.enc.Utf8.parse("{'action':'resetPassword','salt2':'2fd1','device':'8c:a6:e4:7e:36:a2','paras':['" + 编辑框2.取内容()+"','" + 编辑框3.取内容() + "','" + 编辑框4.取内容() + "'],'code':'42','clientVersion':431,'salt1':'" + 编辑框2.取内容()+"','version':'102'}")));	对话框1.弹出提示("完成！");}</script></html>
